workspace = {members = ["abc311", "abc359", "abc358", "abc357", "abc356", "abc355", "abc354", "abc353", "abc352", "abc351", "abc350", "tessoku-book", "abc349", "abc348", "abc347", "abc346", "abc345", "abc344", "abc343", "abc342", "abc341", "abc340", "abc339", "abc338", "abc337", "abc336", "abc335", "abc334", "abc333", "abc332", "abc331", "abc330", "abc329", "abc317", "abc257", "abc255", "abc231", "abs", "arc175", "arc176", "typical90", "typical-algorithm", "arc180", "abc360", "abc361", "abc362", "abc328", "abc327", "abc326", "abc325", "abc324", "abc363", "abc364", "abc365", "abc366", "abc367", "abc368"],exclude = []}

[package]
name = "atcoder"
version = "1.1.1"
edition = "2021"
metadata = { cargo-compete = { bin = { abc311-a = { alias = "abc311_a", problem = "https://atcoder.jp/contests/abc311/tasks/abc311_a"}, abc311-b = { alias = "abc311_b", problem = "https://atcoder.jp/contests/abc311/tasks/abc311_b"}, abc312-a = { alias = "abc312_a", problem = "https://atcoder.jp/contests/abc312/tasks/abc312_a"}}}}

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ac-library-rs = "=0.1.1"
once_cell = "=1.18.0"
static_assertions = "=1.1.0"
varisat = "=0.2.2"
memoise = "=0.3.2"
argio = "=0.2.0"
bitvec = "=1.0.1"
counter = "=0.5.7"
hashbag = "=0.1.11"
pathfinding = "=4.3.0"
recur-fn = "=2.2.0"
indexing = "=0.4.1"
amplify = "=3.14.2"
amplify_derive = "=2.11.3"
amplify_num = "=0.4.1"
easy-ext = "=1.0.1"
multimap = "=0.9.0"
btreemultimap = "=0.1.1"
bstr = "=1.6.0"
az = "=1.2.1"
glidesort = "=0.1.2"
tap = "=1.0.1"
omniswap = "=0.1.0"
multiversion = "=0.7.2"
num = "=0.4.1"
num-bigint = "=0.4.3"
num-complex = "=0.4.3"
num-integer = "=0.1.45"
num-iter = "=0.1.43"
num-rational = "=0.4.1"
num-traits = "=0.2.15"
num-derive = "=0.4.0"
ndarray = "=0.15.6"
nalgebra = "=0.32.3"
alga = "=0.9.3"
libm = "=0.2.7"
rand = "=0.8.5"
getrandom = "=0.2.10"
rand_chacha = "=0.3.1"
rand_core = "=0.6.4"
rand_hc = "=0.3.2"
rand_pcg = "=0.3.1"
rand_distr = "=0.4.3"
petgraph = "=0.6.3"
indexmap = "=2.0.0"
regex = "=1.9.1"
lazy_static = "=1.4.0"
ordered-float = "=3.7.0"
ascii = "=1.1.0"
permutohedron = "=0.2.4"
superslice = "=1.0.0"
itertools = "=0.11.0"
itertools-num = "=0.1.3"
maplit = "=1.0.2"
either = "=1.8.1"
im-rc = "=15.1.0"
fixedbitset = "=0.4.2"
bitset-fixed = "=0.1.0"
proconio = { version = "=0.4.5", features = ["derive"] }
text_io = "=0.1.12"
rustc-hash = "=1.1.0"
smallvec = "=1.11.0"

[dev-dependencies]
cli_test_dir = "0.1"
test-case = "3.3.0"

[[bin]]
name = "abc311-a"
path = "src/bin/abc311_a.rs"

[[bin]]
name = "abc311-b"
path = "src/bin/abc311_b.rs"

[[bin]]
name = "abc312-a"
path = "src/bin/abc312_a.rs"
